WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233701
Regression(
r283912
) Broke backward compatibility for Swift bindings
https://bugs.webkit.org/show_bug.cgi?id=233701
Summary
Regression(r283912) Broke backward compatibility for Swift bindings
Chris Dumez
Reported
2021-12-01 07:27:40 PST
r283912
broke backward compatibility for Swift bindings.
Attachments
Patch
(2.68 KB, patch)
2021-12-01 07:29 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-12-01 07:27:51 PST
<
rdar://85627701
>
Chris Dumez
Comment 2
2021-12-01 07:29:55 PST
Created
attachment 445573
[details]
Patch
Darin Adler
Comment 3
2021-12-01 09:18:30 PST
How do we *eventually* make this change? Is there any way to deprecate the old name and move to the new one over time?
Chris Dumez
Comment 4
2021-12-01 09:30:14 PST
(In reply to Darin Adler from
comment #3
)
> How do we *eventually* make this change? Is there any way to deprecate the > old name and move to the new one over time?
This is WebKitLegacy, do we really have to worry about updating it?
Darin Adler
Comment 5
2021-12-01 09:32:02 PST
(In reply to Chris Dumez from
comment #4
)
> This is WebKitLegacy, do we really have to worry about updating it?
I see your point. I agree that we don’t.
EWS
Comment 6
2021-12-01 09:45:40 PST
Committed
r286367
(
244726@main
): <
https://commits.webkit.org/244726@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445573
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug