Regression(r283912) Broke backward compatibility for Swift bindings https://bugs.webkit.org/show_bug.cgi?id=233701 <rdar://85627701>

Reviewed by Darin Adler.

Rename EpochTimeStamp back to DOMTimeStamp in DOMObject.h & DOMEvent.h
since those are API headers and we need to maintain backward compatibility.

* DOM/DOMEvent.h:
* DOM/DOMEvent.mm:
(-[DOMEvent timeStamp]):
* DOM/DOMObject.h:



Canonical link: https://commits.webkit.org/244726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286367 268f45cc-cd09-0410-ab3c-d52691b4dbfc